# ws_client

./: Cargo.toml
src/: main.rs
src/analytics/: candle_aggregator.rs  mod.rs
src/exchange/: binance.rs  mod.rs  traits.rs
src/ingestion/: supervisor.rs
src/kafka/: producer.rs
src/model/: candle.rs  event.rs  mod.rs  tick.rs
src/producer/: candle_worker.rs  mod.rs  task.rs
src/transport/: websocket.rs
